雑な第 1 章を執筆

--- a/graduation_thesis.tex
+++ b/graduation_thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt, a4paper]{jsarticle}
+\documentclass[10pt, a4paper]{jreport}
 
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{here}
@@ -15,7 +15,32 @@
 
 % ----------------------------------------------------------------------------------------------------
 
-\section*{第1章　はじめに}
+\chapter{はじめに}
+インターネットの急速な普及に伴って，情報のアクセスが容易になり，我々の生活が豊かになった一方で，インターネットを悪用したサイバー犯罪が横行している．
+
+サイバー犯罪は，サーバやアプリケーションの脆弱性を利用して，アクセス権限を要する情報を不正に入手したり，サーバに莫大な負荷をかけて，サービスに支障をきたしたりする行為のことである．サイバー犯罪の被害として，顧客の個人情報が流出したり，サービスが長期間，利用できなくなることなどが挙げられる．これらの被害は，サービスを利用する顧客にとっても，サービスを運営する企業にとっても大きな損失となるため，サイバー犯罪の被害を未然に防ぐことはもちろん，被害に遭った際に犯人を特定するための対策を講じることも重要である．
+
+サイバー犯罪の犯人を特定する情報として，多くの場合，IPアドレスが用いられる．サイバー犯罪の被害を受けたサーバのログから，サイバー犯罪に該当するアクセスのIPアドレスを捜査し，インターネットサービスプロパイダに照会を要請することで，犯人の身元を特定することができる．
+
+しかし，技術の進歩により，近年では，IPアドレスのみによる個人の特定は困難になってきている．VPNやTorを用いることで，インターネットサービスプロパイダから割り振られている本来のIPアドレスを秘匿化してインターネットに接続することができる．また，キャリアグレードNATの普及により，通常よりIPアドレスでの個人の特定が難しくなっていることも事実である．これらの技術についての詳細は，次章で後述する．
+
+そこで，本論文では，サイバー犯罪が発生した際に，IPアドレス以外の方法で犯人を特定する手法について提案する．インターネット利用者が，サーバに送信する情報は複数挙げられるが，その中でもCookieに着目した特定システムを提案する．Cookieは，WebサーバがWebブラウザに対して，任意の文字列を記憶させるための仕組みである．サーバからCookieを保存するように支持されたブラウザは，以降，そのWebサイトに対して，記憶したCookieを送信するようになる．
+
+Cookieを利用することで，サービスのログイン状態を記憶したり，ECサイトにおいて，ショッピングカードの中身を記憶させたりすることができる．一方で，アクセスしてきたユーザに，ユニークな文字列を発行し，Cookieとして保存させることで，過去にそのユーザがアクセスしてきたかどうかがわかるため，個人を特定するために用いられることもある．このように，Cookieはユーザを特定する十分な情報となり得る．
+
+% ここに，この論文の章立ての説明を書く．
+\newpage
+
+\chapter{研究背景}
+サイバー犯罪が起こった際に，IPアドレスなどで犯人を特定するが，最近では，キャリアグレードNATなどの技術の普及により，IPアドレスでの追跡は困難となっている．そこで，IPアドレス以外の情報，たとえばCookieなどを用いることで犯人を特定する手法について提案する．
+\newpage
+
+\chapter{研究方法}
+\section{研究目的}
+サイバー犯罪が起こったときに，IPアドレス以外の方法で攻撃者を特定するため．
+\section{提案手法}
+
+
 \newpage
 
 
