研究背景を執筆中

--- a/graduation_thesis.tex
+++ b/graduation_thesis.tex
@@ -20,20 +20,76 @@
 
 サイバー犯罪は，サーバやアプリケーションの脆弱性を利用して，アクセス権限を要する情報を不正に入手したり，サーバに莫大な負荷をかけて，サービスに支障をきたしたりする行為のことである．サイバー犯罪の被害として，顧客の個人情報が流出したり，サービスが長期間，利用できなくなることなどが挙げられる．これらの被害は，サービスを利用する顧客にとっても，サービスを運営する企業にとっても大きな損失となるため，サイバー犯罪の被害を未然に防ぐことはもちろん，被害に遭った際に犯人を特定するための対策を講じることも重要である．
 
-サイバー犯罪の犯人を特定する情報として，多くの場合，IPアドレスが用いられる．サイバー犯罪の被害を受けたサーバのログから，サイバー犯罪に該当するアクセスのIPアドレスを捜査し，インターネットサービスプロパイダに照会を要請することで，犯人の身元を特定することができる．
+サイバー犯罪の犯人を特定する情報として，多くの場合，IPアドレスが用いられる．サイバー犯罪の被害を受けたサーバのログから，サイバー犯罪に該当するアクセスのIPアドレスを捜査し，インターネットサービスプロバイダに照会を要請することで，犯人の身元を特定することができる．
 
-しかし，技術の進歩により，近年では，IPアドレスのみによる個人の特定は困難になってきている．VPNやTorを用いることで，インターネットサービスプロパイダから割り振られている本来のIPアドレスを秘匿化してインターネットに接続することができる．また，キャリアグレードNATの普及により，通常よりIPアドレスでの個人の特定が難しくなっていることも事実である．これらの技術についての詳細は，次章で後述する．
+しかし，技術の進歩により，近年では，IPアドレスのみによる個人の特定は困難になってきている．VPNやTorを用いることで，インターネットサービスプロバイダから割り振られている本来のIPアドレスを秘匿化してインターネットに接続することができる．また，キャリアグレードNATの普及により，通常よりIPアドレスでの個人の特定が難しくなっていることも事実である．これらの技術についての詳細は，次章で後述する．
 
-そこで，本論文では，サイバー犯罪が発生した際に，IPアドレス以外の方法で犯人を特定する手法について提案する．インターネット利用者が，サーバに送信する情報は複数挙げられるが，その中でもCookieに着目した特定システムを提案する．Cookieは，WebサーバがWebブラウザに対して，任意の文字列を記憶させるための仕組みである．サーバからCookieを保存するように支持されたブラウザは，以降，そのWebサイトに対して，記憶したCookieを送信するようになる．
+そこで，本論文では，サイバー犯罪が発生した際に，IPアドレス以外の方法で犯人を特定する手法について提案する．インターネット利用者が，サーバに送信する情報は複数挙げられるが，その中でもCookieに着目した特定システムを提案する．Cookieは，WebサーバがWebブラウザに対して，任意の文字列を記憶させるための仕組みである．サーバからCookieを保存するように指示されたブラウザは，以降，そのWebサイトに対して，記憶したCookieを送信するようになる．
 
-Cookieを利用することで，サービスのログイン状態を記憶したり，ECサイトにおいて，ショッピングカードの中身を記憶させたりすることができる．一方で，アクセスしてきたユーザに，ユニークな文字列を発行し，Cookieとして保存させることで，過去にそのユーザがアクセスしてきたかどうかがわかるため，個人を特定するために用いられることもある．このように，Cookieはユーザを特定する十分な情報となり得る．
+Cookieを利用することで，サービスのログイン状態を記憶したり，ECサイトにおいて，ショッピングカートの中身を記憶させたりすることができる．一方で，アクセスしてきたユーザに，ユニークな文字列を発行し，Cookieとして保存させることで，過去にそのユーザがアクセスしてきたかどうかがわかるため，個人を特定するために用いられることもある．このように，Cookieはユーザを特定する十分な情報となり得る．
 
 % ここに，この論文の章立ての説明を書く．
 \newpage
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%サイバー犯罪が起こった際に，IPアドレスなどで犯人を特定するが，最近では，キャリアグレードNATなどの技術の普及により，IPアドレスでの追跡は困難となっている．そこで，IPアドレス以外の情報，たとえばCookieなどを用いることで犯人を特定する手法について提案する．
 \chapter{研究背景}
-サイバー犯罪が起こった際に，IPアドレスなどで犯人を特定するが，最近では，キャリアグレードNATなどの技術の普及により，IPアドレスでの追跡は困難となっている．そこで，IPアドレス以外の情報，たとえばCookieなどを用いることで犯人を特定する手法について提案する．
+\section{IPアドレスによる特定の難しさ}
+発信元のIPアドレスを特定することで，発信者の利用しているインターネットサービスプロバイダやキャリア，地域レベルの位置情報を取得できることが多い．サイバー犯罪が発生した際に，IPアドレスからインターネットサービスプロバイダを特定し，インターネットサービスプロバイダに照会を要請することで犯人を特定することができる．
+
+しかし，技術の進歩により，IPアドレスによる個人の特定は困難であるケースも珍しくない．IPアドレスによる個人の特定が困難となる技術の代表例を以下に示す．
+
+\subsection{キャリアグレードNAT}
+キャリアグレードNATとは，インターネットサービスプロバイダなどが，ネットワークアドレス変換(NAT)を行う仕組みである．ネットワークアドレス変換とは，同一LAN内の各端末に割り振られたプライベートIPアドレスと，インターネットサービスプロバイダから割り振られたグローバルIPアドレスを変換するための仕組みである．IPv4アドレスの枯渇問題により，インターネットに接続する各端末すべてにグローバルIPアドレスを割り振ることは困難である．そこで，各端末には，グローバルIPアドレスの代わりに，プライベートIPアドレスを割り振り，インターネットに接続する際に，プライベートIPアドレスをグローバルIPアドレスに変換することで，LAN内の複数の端末を同じグローバルIPアドレスでインターネットに接続させることができる．ネットワークアドレス変換は，各家庭のLAN内で行われるが，これをインターネットサービスプロバイダ単位で行ったものがキャリアグレードNATである．
+
+IPv4アドレスの枯渇問題を解消する手段として，キャリアグレードNATがしばしば利用されているが，同一のグローバルIPアドレスが，複数のインターネット利用者によって使用されるため，キャリアグレードNATを使用している場合は，IPアドレスによる個人の特定が困難となる．インターネットサービスプロバイダでは，キャリアグレードNATを利用した際のIPアドレスの変換テーブルを保持しているが，変換テーブルは，最新の約2ヶ月分しか記録されていないため，保存期間を過ぎると，IPアドレスによる特定ができなくなる．
+
+\subsection{VPN}
+
+\subsection{Tor}
+
+\section{IPアドレスによる誤認逮捕}
+
+\section{Cookieによる個人の特定}
+IPアドレスによる個人の特定は困難であったり，誤認逮捕を招く可能性があるため，サイバー犯罪において犯人を特定する情報としては，十分とはいえない．そこで，本論文では，Cookieによる個人の特定可能性に着目した．
+
+Cookieとは，Webサーバが，Webブラウザに対して，任意の情報(文字列)を記憶させるための仕組みである．サーバからCookieを保存するように指示されたブラウザは，以降，そのWebサイトに対して，記憶したCookieを送信するようになる．
+
+Cookieを利用することで，サービスのログイン状態を記憶したり，ECサイトにおいて，ショッピングカートの中身を記憶させたりすることができる．一方で，アクセスしてきたユーザに，ユニークな文字列を発行し，Cookieとして保存させることで，過去にそのユーザがアクセスしてきたかどうかを調べることができる．このように，Cookieはユーザを特定する十分な情報となり得る．
+
+ブラウザがサーバに送信する情報として，使用している言語，ブラウザやOSの種類，バージョンなどが挙げられるが，これらは他のユーザと似たような情報となることが多い上，本来とは異なる情報を送信することも可能である．それに対して，Cookieは，サーバがブラウザに保存するように指示する値であるため，サーバがユニークな値を発行し，発行した値を記録しておくことができる．そのため，他のユーザと区別することができる上，ユーザが，サーバから指示された値とは異なるCookieを送信しても，詐称したことがわかる．よって，Cookieは，ブラウザがサーバに送信する情報の中でも，個人を特定できる可能性が高いことがわかる．
+
+
 \newpage
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 \chapter{研究方法}
 \section{研究目的}
