実験結果の表を追加

--- a/graduation_thesis.tex
+++ b/graduation_thesis.tex
@@ -5,6 +5,7 @@
 \usepackage{comment}
 \usepackage{otf}
 \usepackage{framed}
+\usepackage{longtable}
 
 % 「関連図書」を「参考文献」に変換させる．
 \renewcommand{\bibname}{参考文献}
@@ -419,7 +420,7 @@ Mastodonアカウントにログインした状態で書込みを行わなけれ
 
 \section{実験内容}\label{sec: exp_flow}
 % 実験結果の前に，アカウントを特定するまでの流れを書こう．データベースからCookieを引っ張り出してきて，セッションデコーダにかけて復号して，得られたユーザIDからアカウント名を特定する流れ．
-匿名掲示板に投稿された書込みすべてに対して，書込みを行ったユーザのMastodonのアカウントを特定した．アカウントを特定するまでの流れを以下に示す．
+匿名掲示板に投稿された書込みすべてに対して，書込みを行ったユーザのMastodonのアカウントを特定した．アカウントを特定するまでの手順を以下に示す．
 
 \begin{enumerate}
 \item{書込みとCookieの紐付け}
@@ -498,16 +499,66 @@ SELECT * FROM accounts WHERE id = 3;
 アカウントに関する情報はaccountsテーブルに保存されている．accountsテーブルには，アカウント登録時のユーザ名が保存されている．\ref{sec: exp_flow}に示す一連の作業を実行すると，結果として，匿名掲示板に書込みを投稿した者のMastodonのユーザ名を特定することができる．ユーザ名を特定することで，そのアカウントに登録されているメールアドレスなどを特定することができる．実際のサイバー犯罪でこの手法を活用する場合，犯人のTwitterやFacebookなどのアカウントを特定することで，本実験以上に犯人を特定する情報が得られることが期待できる．
 
 \section{実験結果}
+本実験の被験者15名に本実験に協力してもらったところ，計32件(自身による実験概要の説明のための書込みを除く)の書込みがあった．32件の書込みすべてに対して，\ref{sec: exp_flow}節で説明した手順を実行してアカウントの特定を行った．その結果を表\ref{tb: exp_result}に示す．
+
+
+% ユーザ名を使っていいかどうかの確認と，Cookie送信時刻の日本時間への変換が必要！！
+\begin{table}[H]
+	\caption{実験結果}
+	\label{tb: exp_result}
+	\begin{center}
+		\scalebox{0.85} {
+			\begin{tabular}{ | c | c | c | c | c | c | c | } \hline
+
+番号 & IPアドレス & Cookie ID & アカウントID & ユーザ名 & 書込み時刻 & Cookie送信時刻 \\ \hline
+2 & xxx.xxx.xxx.xxx & 33 & 特定不可 & 特定不可 & 2017-12-13 17:50:34 & 2017-12-13 08:50:37 \\ \hline
+3 & 133.19.169.6 & 35 & 3 & yo & 2017-12-13 17:51:21 & 2017-12-13 08:51:23 \\ \hline
+4 & 133.19.169.6 & 37 & 7 & hoge & 2017-12-13 17:51:23 & 2017-12-13 08:51:29 \\ \hline
+5 & 133.19.169.6 & 49 & 特定不可 & 特定不可 & 2017-12-13 17:59:29 & 2017-12-13 08:59:36 \\ \hline
+6 & 133.19.169.6 & 55 & 4 & eatarl\_02 & 2017-12-13 18:01:08 & 2017-12-13 09:01:11 \\ \hline
+7 & xxx.xxx.xxx.xxx & 57 & 2 & mahiro & 2017-12-13 18:01:23 & 2017-12-13 09:01:26 \\ \hline
+8 & 133.19.169.6 & 59 & 10 & Yuri & 2017-12-13 18:01:27 & 2017-12-13 09:01:30 \\ \hline
+9 & xxx.xxx.xxx.xxx & 62 & 15 & tetsutalow & 2017-12-13 18:01:35 & 2017-12-13 09:01:41 \\ \hline
+10 & 133.19.169.6 & 64 & 12 & ryota & 2017-12-13 18:01:46 & 2017-12-13 09:01:49 \\ \hline
+11 & 133.19.169.6 & 75 & 16 & rider555 & 2017-12-13 18:02:44 & 2017-12-13 09:02:46 \\ \hline
+12 & xxx.xxx.xxx.xxx & 77 & 13 & tomo & 2017-12-13 18:03:01 & 2017-12-13 09:03:04 \\ \hline
+13 & xxx.xxx.xxx.xxx & 78 & 9 & miyamo & 2017-12-13 18:03:10 & 2017-12-13 09:03:14 \\ \hline
+14 & xxx.xxx.xxx.xxx & 81 & 8 & kazkaz144 & 2017-12-13 18:03:15 & 2017-12-13 09:03:23 \\ \hline
+15 & xxx.xxx.xxx.xxx & 86 & 5 & wangyuncong & 2017-12-13 18:03:31 & 2017-12-13 09:03:44 \\ \hline
+16 & xxx.xxx.xxx.xxx & 93 & 15 & tetsutalow & 2017-12-13 18:04:06 & 2017-12-13 09:04:09 \\ \hline
+17 & xxx.xxx.xxx.xxx & 92 & 11 & bbbbbb & 2017-12-13 18:04:06 & 2017-12-13 09:04:08 \\ \hline
+18 & 133.19.169.6 & 104 & 特定不可 & 特定不可 & 2017-12-13 18:04:24 & 2017-12-13 09:04:42 \\ \hline
+19 & 133.19.169.6 & 100 & 4 & eatarl\_02 & 2017-12-13 18:04:27 & 2017-12-13 09:04:29 \\ \hline
+20 & 133.19.169.6 & 108 & 7 & hoge & 2017-12-13 18:05:11 & 2017-12-13 09:05:13 \\ \hline
+21 & 133.19.169.6 & 109 & 3 & yo & 2017-12-13 18:05:15 & 2017-12-13 09:05:17 \\ \hline
+22 & 133.19.169.6 & 116 & 12 & ryota & 2017-12-13 18:05:29 & 2017-12-13 09:05:31 \\ \hline
+23 & 133.19.169.6 & 120 & 特定不可 & 特定不可 & 2017-12-13 18:05:33 & 2017-12-13 09:05:35 \\ \hline
+24 & xxx.xxx.xxx.xxx & 122 & 2 & mahiro & 2017-12-13 18:05:44 & 2017-12-13 09:05:46 \\ \hline
+25 & 133.19.169.6 & 132 & 特定不可 & 特定不可 & 2017-12-13 18:06:47 & 2017-12-13 09:06:49 \\ \hline
+26 & xxx.xxx.xxx.xxx & 134 & 9 & miyamo & 2017-12-13 18:07:01 & 2017-12-13 09:07:04 \\ \hline
+27 & xxx.xxx.xxx.xxx & 136 & 9 & miyamo & 2017-12-13 18:07:54 & 2017-12-13 09:07:56 \\ \hline
+28 & 133.19.169.6 & 138 & 特定不可 & 特定不可 & 2017-12-13 18:08:14 & 2017-12-13 09:08:16 \\ \hline
+29 & 133.19.169.6 & 144 & 12 & ryota & 2017-12-13 18:09:10 & 2017-12-13 09:09:12 \\ \hline
+30 & 133.19.169.6 & 145 & 7 & hoge & 2017-12-13 18:09:11 & 2017-12-13 09:09:14 \\ \hline
+31 & xxx.xxx.xxx.xxx & 146 & 15 & tetsutalow & 2017-12-13 18:09:22 & 2017-12-13 09:09:25 \\ \hline
+32 & 133.19.169.6 & 169 & 7 & hoge & 2017-12-13 18:13:48 & 2017-12-13 09:13:50 \\ \hline
+34 & xxx.xxx.xxx.xxx & 214 & 12 & ryota & 2017-12-16 16:18:02 & 2017-12-16 07:18:05 \\ \hline
+
+			\end{tabular}
+		}
+	\end{center}
+\end{table}
 
 
 
 
-
-
-
-
-
-
+%\chapter{評価と考察}
+% 考察には，以下のことを書く．
+% ほとんど学内のWi-Fiからだけど，特定できた
+% 匿名掲示板に異なる名前で投稿していても，特定できた
+% 同じユーザが別のネットワークから書き込んでも，特定できた
+% 特定できなかったのは，ブラウザの機能や拡張機能によるものである
+% 特定できない書込みは6件あったが，同一ユーザによる書込みであることは特定でき，結果として2名の書込みであることまではわかった
 
 
 
