実験結果のコメントを追加

--- a/graduation_thesis.tex
+++ b/graduation_thesis.tex
@@ -549,6 +549,18 @@ SELECT * FROM accounts WHERE id = 3;
 	\end{center}
 \end{table}
 
+% 連番になっていないことの説明をすること(自身の書込みのことを説明)
+% IPアドレスのxxx.xxx.xxx.xxxは(学外)とする．
+% ユーザ名は，具体的なものではなく，ユーザA，ユーザB，ユーザC，...とする．
+
+
+
+
+
+
+
+
+
 
 
 
