--- a/graduation_thesis.tex
+++ b/graduation_thesis.tex
@@ -502,7 +502,7 @@ SELECT * FROM accounts WHERE id = 3;
 本実験の被験者15名に本実験に協力してもらったところ，計32件(自身による実験概要の説明のための書込みを除く)の書込みがあった．32件の書込みすべてに対して，\ref{sec: exp_flow}節で説明した手順を実行してアカウントの特定を行った．その結果を表\ref{tb: exp_result}に示す．
 
 
-% ユーザ名を使っていいかどうかの確認と，Cookie送信時刻の日本時間への変換が必要！！
+% データに間違いがないことの最終確認を行う！！
 \begin{table}[H]
 	\caption{実験結果}
 	\label{tb: exp_result}
@@ -511,38 +511,38 @@ SELECT * FROM accounts WHERE id = 3;
 			\begin{tabular}{ | c | c | c | c | c | c | c | } \hline
 
 番号 & IPアドレス & Cookie ID & アカウントID & ユーザ名 & 書込み時刻 & Cookie送信時刻 \\ \hline
-2 & xxx.xxx.xxx.xxx & 33 & 特定不可 & 特定不可 & 2017-12-13 17:50:34 & 2017-12-13 08:50:37 \\ \hline
-3 & 133.19.169.6 & 35 & 3 & yo & 2017-12-13 17:51:21 & 2017-12-13 08:51:23 \\ \hline
-4 & 133.19.169.6 & 37 & 7 & hoge & 2017-12-13 17:51:23 & 2017-12-13 08:51:29 \\ \hline
-5 & 133.19.169.6 & 49 & 特定不可 & 特定不可 & 2017-12-13 17:59:29 & 2017-12-13 08:59:36 \\ \hline
-6 & 133.19.169.6 & 55 & 4 & eatarl\_02 & 2017-12-13 18:01:08 & 2017-12-13 09:01:11 \\ \hline
-7 & xxx.xxx.xxx.xxx & 57 & 2 & mahiro & 2017-12-13 18:01:23 & 2017-12-13 09:01:26 \\ \hline
-8 & 133.19.169.6 & 59 & 10 & Yuri & 2017-12-13 18:01:27 & 2017-12-13 09:01:30 \\ \hline
-9 & xxx.xxx.xxx.xxx & 62 & 15 & tetsutalow & 2017-12-13 18:01:35 & 2017-12-13 09:01:41 \\ \hline
-10 & 133.19.169.6 & 64 & 12 & ryota & 2017-12-13 18:01:46 & 2017-12-13 09:01:49 \\ \hline
-11 & 133.19.169.6 & 75 & 16 & rider555 & 2017-12-13 18:02:44 & 2017-12-13 09:02:46 \\ \hline
-12 & xxx.xxx.xxx.xxx & 77 & 13 & tomo & 2017-12-13 18:03:01 & 2017-12-13 09:03:04 \\ \hline
-13 & xxx.xxx.xxx.xxx & 78 & 9 & miyamo & 2017-12-13 18:03:10 & 2017-12-13 09:03:14 \\ \hline
-14 & xxx.xxx.xxx.xxx & 81 & 8 & kazkaz144 & 2017-12-13 18:03:15 & 2017-12-13 09:03:23 \\ \hline
-15 & xxx.xxx.xxx.xxx & 86 & 5 & wangyuncong & 2017-12-13 18:03:31 & 2017-12-13 09:03:44 \\ \hline
-16 & xxx.xxx.xxx.xxx & 93 & 15 & tetsutalow & 2017-12-13 18:04:06 & 2017-12-13 09:04:09 \\ \hline
-17 & xxx.xxx.xxx.xxx & 92 & 11 & bbbbbb & 2017-12-13 18:04:06 & 2017-12-13 09:04:08 \\ \hline
-18 & 133.19.169.6 & 104 & 特定不可 & 特定不可 & 2017-12-13 18:04:24 & 2017-12-13 09:04:42 \\ \hline
-19 & 133.19.169.6 & 100 & 4 & eatarl\_02 & 2017-12-13 18:04:27 & 2017-12-13 09:04:29 \\ \hline
-20 & 133.19.169.6 & 108 & 7 & hoge & 2017-12-13 18:05:11 & 2017-12-13 09:05:13 \\ \hline
-21 & 133.19.169.6 & 109 & 3 & yo & 2017-12-13 18:05:15 & 2017-12-13 09:05:17 \\ \hline
-22 & 133.19.169.6 & 116 & 12 & ryota & 2017-12-13 18:05:29 & 2017-12-13 09:05:31 \\ \hline
-23 & 133.19.169.6 & 120 & 特定不可 & 特定不可 & 2017-12-13 18:05:33 & 2017-12-13 09:05:35 \\ \hline
-24 & xxx.xxx.xxx.xxx & 122 & 2 & mahiro & 2017-12-13 18:05:44 & 2017-12-13 09:05:46 \\ \hline
-25 & 133.19.169.6 & 132 & 特定不可 & 特定不可 & 2017-12-13 18:06:47 & 2017-12-13 09:06:49 \\ \hline
-26 & xxx.xxx.xxx.xxx & 134 & 9 & miyamo & 2017-12-13 18:07:01 & 2017-12-13 09:07:04 \\ \hline
-27 & xxx.xxx.xxx.xxx & 136 & 9 & miyamo & 2017-12-13 18:07:54 & 2017-12-13 09:07:56 \\ \hline
-28 & 133.19.169.6 & 138 & 特定不可 & 特定不可 & 2017-12-13 18:08:14 & 2017-12-13 09:08:16 \\ \hline
-29 & 133.19.169.6 & 144 & 12 & ryota & 2017-12-13 18:09:10 & 2017-12-13 09:09:12 \\ \hline
-30 & 133.19.169.6 & 145 & 7 & hoge & 2017-12-13 18:09:11 & 2017-12-13 09:09:14 \\ \hline
-31 & xxx.xxx.xxx.xxx & 146 & 15 & tetsutalow & 2017-12-13 18:09:22 & 2017-12-13 09:09:25 \\ \hline
-32 & 133.19.169.6 & 169 & 7 & hoge & 2017-12-13 18:13:48 & 2017-12-13 09:13:50 \\ \hline
-34 & xxx.xxx.xxx.xxx & 214 & 12 & ryota & 2017-12-16 16:18:02 & 2017-12-16 07:18:05 \\ \hline
+2 & (学外) & 33 & (特定不可) & \shortstack{ユーザα\\(特定不可)} & 2017-12-13 17:50:34 & 2017-12-13 17:50:37 \\ \hline
+3 & 133.19.169.6 & 35 & 3 & ユーザA & 2017-12-13 17:51:21 & 2017-12-13 17:51:23 \\ \hline
+4 & 133.19.169.6 & 37 & 7 & ユーザB & 2017-12-13 17:51:23 & 2017-12-13 17:51:29 \\ \hline
+5 & 133.19.169.6 & 49 & (特定不可) & \shortstack{ユーザβ\\(特定不可)} & 2017-12-13 17:59:29 & 2017-12-13 17:59:36 \\ \hline
+6 & 133.19.169.6 & 55 & 4 & ユーザC & 2017-12-13 18:01:08 & 2017-12-13 18:01:11 \\ \hline
+7 & (学外) & 57 & 2 & ユーザD & 2017-12-13 18:01:23 & 2017-12-13 18:01:26 \\ \hline
+8 & 133.19.169.6 & 59 & 10 & ユーザE & 2017-12-13 18:01:27 & 2017-12-13 18:01:30 \\ \hline
+9 & (学外) & 62 & 15 & ユーザF & 2017-12-13 18:01:35 & 2017-12-13 18:01:41 \\ \hline
+10 & 133.19.169.6 & 64 & 12 & ユーザG & 2017-12-13 18:01:46 & 2017-12-13 18:01:49 \\ \hline
+11 & 133.19.169.6 & 75 & 16 & ユーザH & 2017-12-13 18:02:44 & 2017-12-13 18:02:46 \\ \hline
+12 & (学外) & 77 & 13 & ユーザI & 2017-12-13 18:03:01 & 2017-12-13 18:03:04 \\ \hline
+13 & (学外) & 78 & 9 & ユーザJ & 2017-12-13 18:03:10 & 2017-12-13 18:03:14 \\ \hline
+14 & (学外) & 81 & 8 & ユーザK & 2017-12-13 18:03:15 & 2017-12-13 18:03:23 \\ \hline
+15 & (学外) & 86 & 5 & ユーザL & 2017-12-13 18:03:31 & 2017-12-13 18:03:44 \\ \hline
+16 & (学外) & 93 & 15 & ユーザF & 2017-12-13 18:04:06 & 2017-12-13 18:04:09 \\ \hline
+17 & (学外) & 92 & 11 & ユーザM & 2017-12-13 18:04:06 & 2017-12-13 18:04:08 \\ \hline
+18 & 133.19.169.6 & 104 & (特定不可) & \shortstack{ユーザβ\\(特定不可)} & 2017-12-13 18:04:24 & 2017-12-13 18:04:42 \\ \hline
+19 & 133.19.169.6 & 100 & 4 & ユーザC & 2017-12-13 18:04:27 & 2017-12-13 18:04:29 \\ \hline
+20 & 133.19.169.6 & 108 & 7 & ユーザB & 2017-12-13 18:05:11 & 2017-12-13 18:05:13 \\ \hline
+21 & 133.19.169.6 & 109 & 3 & ユーザA & 2017-12-13 18:05:15 & 2017-12-13 18:05:17 \\ \hline
+22 & 133.19.169.6 & 116 & 12 & ユーザG & 2017-12-13 18:05:29 & 2017-12-13 18:05:31 \\ \hline
+23 & 133.19.169.6 & 120 & (特定不可) & \shortstack{ユーザβ\\(特定不可)} & 2017-12-13 18:05:33 & 2017-12-13 18:05:35 \\ \hline
+24 & (学外) & 122 & 2 & ユーザD & 2017-12-13 18:05:44 & 2017-12-13 18:05:46 \\ \hline
+25 & 133.19.169.6 & 132 & (特定不可) & \shortstack{ユーザα\\(特定不可)} & 2017-12-13 18:06:47 & 2017-12-13 18:06:49 \\ \hline
+26 & (学外) & 134 & 9 & ユーザJ & 2017-12-13 18:07:01 & 2017-12-13 18:07:04 \\ \hline
+27 & (学外) & 136 & 9 & ユーザJ & 2017-12-13 18:07:54 & 2017-12-13 18:07:56 \\ \hline
+28 & 133.19.169.6 & 138 & (特定不可) & \shortstack{ユーザα\\(特定不可)} & 2017-12-13 18:08:14 & 2017-12-13 18:08:16 \\ \hline
+29 & 133.19.169.6 & 144 & 12 & ユーザG & 2017-12-13 18:09:10 & 2017-12-13 18:09:12 \\ \hline
+30 & 133.19.169.6 & 145 & 7 & ユーザB & 2017-12-13 18:09:11 & 2017-12-13 18:09:14 \\ \hline
+31 & (学外) & 146 & 15 & ユーザF & 2017-12-13 18:09:22 & 2017-12-13 18:09:25 \\ \hline
+32 & 133.19.169.6 & 169 & 7 & ユーザB & 2017-12-13 18:13:48 & 2017-12-13 18:13:50 \\ \hline
+34 & (学外) & 214 & 12 & ユーザG & 2017-12-16 16:18:02 & 2017-12-16 16:18:05 \\ \hline
 
 			\end{tabular}
 		}
@@ -550,8 +550,7 @@ SELECT * FROM accounts WHERE id = 3;
 \end{table}
 
 % 連番になっていないことの説明をすること(自身の書込みのことを説明)
-% IPアドレスのxxx.xxx.xxx.xxxは(学外)とする．
-% ユーザ名は，具体的なものではなく，ユーザA，ユーザB，ユーザC，...とする．
+% ユーザ名は，具体的なものではなく，ユーザA，ユーザB，ユーザC，...とする．それを説明する．
 
 
 
