実験結果を「実験結果の正答率」まで執筆

--- a/graduation_thesis.tex
+++ b/graduation_thesis.tex
@@ -442,6 +442,8 @@ SELECT * FROM buttons WHERE created_at BETWEEN '2017-12-13 08:51:00' AND '2017-1
 buttonsテーブルには，Mastodonのシェアボタンを読み込み際に送信されたCookieが保存されている．保存されているデータは表\ref{tb: buttons_database}の通りである．Railsで扱うデータベースには，すべてのテーブルにレコードの作成日時と更新日時が自動で追加される．ソースコード\ref{prog: post_search_sql}で使用しているcreated\_atはレコードの作成日時に該当する．検索結果は，指定した期間内のレコードの作成日時順に，該当するレコードを表示している．つまり，書込みがあった時刻に近い範囲の時刻で送信されているCookieをすべて表示するSQLとなっている．
 
 表示された複数のレコードのうち，書込み時刻よりも後であり，最も書込み時刻に近いレコードを調べる．そのレコードに保存されているIPアドレスやユーザエージェントが，書込みのものと一致していれば，そのレコードが書込みに対応するものであると判断する．なお，匿名掲示板側のIPアドレスは匿名掲示板への書込みが保存されたファイル内に保存されているもの，ユーザエージェントはWebサーバのログに保存されているものを利用した．
+% リファラで本当に送信元が匿名掲示板なのかをチェックしたってことも書く？
+% フィンガープリンティングの情報も念押しのためにチェックしたことも書く？
 
 \subsection{Cookieに含まれるセッション情報の復号}
 書込み情報と一致したレコードからCookieを調べる．例として，2017年12月13日17時51分21秒に投稿された書込みと一致するレコードのCookieは以下の通りである．
@@ -550,9 +552,40 @@ SELECT * FROM accounts WHERE id = 3;
 \end{table}
 
 % 連番になっていないことの説明をすること(自身の書込みのことを説明)
-% ユーザ名は，具体的なものではなく，ユーザA，ユーザB，ユーザC，...とする．それを説明する．
+% ユーザ名は，具体的なものではなく，ユーザA，ユーザB，ユーザC，...とする．
 
+表中の「番号」は匿名掲示板への書込み番号(連番)，Cookie IDは送信されたCookieを管理するためのデータベース上のユニークな番号(連番)，アカウントIDはアカウントを管理するためのデータベース上のユニークな番号(連番)を表す．番号1，33，35は，自身の実験概要の説明のための書込みであるため，省略している．書込み時刻は匿名掲示板への書込みが行われた時刻，Cookie送信時刻は匿名掲示板への書込みに対応するCookieが送信された時刻を表す．また，IPアドレスが133.19.169.6となっているものは立命館大学内のネットワークからのアクセスであり，それ以外のネットワークからアクセスされた際のIPアドレス(モバイル端末など)は(学外)とした．
 
+32件中，26件の書込みは特定することができたが，残りの6件は特定することができなかった．その原因は，匿名掲示板への書込み後，SNSシェアボタンを読み込むアクセスはあったが，そのアクセスの際にCookieが送信されていなかったためである．特定できなかった6件の書込みの送信元情報を表\ref{tb: exp_result_untracked}に示す．なお，ユーザエージェントは長いため，それぞれ共通の部分は省略している．
+
+\begin{table}[H]
+	\caption{特定できなかった書込みの送信元情報}
+	\label{tb: exp_result_untracked}
+	\begin{center}
+		\scalebox{0.85} {
+			\begin{tabular}{ | c | c | c | c | } \hline
+
+番号 & IPアドレス & ユーザエージェント & 画面サイズ \\ \hline
+2 & (学外) & Windows NT 10.0; WOW64 Vivaldi/1.91.867.38 & 1280x720 \\ \hline
+5 & 133.19.169.6 & Windows NT 6.3; Win64; x64 Chrome/63.0.3239.84 & 1280x720 \\ \hline
+18 & 133.19.169.6 & Windows NT 6.3; Win64; x64 Chrome/63.0.3239.84 & 1280x720 \\ \hline
+23 & 133.19.169.6 & Windows NT 6.3; Win64; x64 Chrome/63.0.3239.84 & 1280x720 \\ \hline
+25 & 133.19.169.6 & Windows NT 10.0; WOW64 Vivaldi/1.91.867.38 & 1280x720 \\ \hline
+28 & 133.19.169.6 & Windows NT 10.0; WOW64 Vivaldi/1.91.867.38 & 1280x720 \\ \hline
+
+			\end{tabular}
+		}
+	\end{center}
+\end{table}
+
+本実験は，立命館大学内のネットワークを使用した被験者が多かったため，IPアドレスでの特定は困難である．また，特定できなかった書込みの送信元の画面サイズの情報は，6件すべて同じであった．ところが，ユーザエージェントが，番号2，25，28と，5，18，23とでそれぞれ全く同じであったため，特定できなかった6件の書込みは，2名の被験者によって書き込まれていることがわかった．これは，被験者15名に対して，特定できた被験者がユーザAからユーザMまでの13名であり，特定できなかった被験者が2名いることに符合する．ちなみに，番号2，25，28の書込みを行った被験者が，番号2では学外のネットワークからアクセスしているのに対し，番号25，28では学内のネットワークからアクセスしていることがわかる．
+
+\subsection{実験結果の正答率}
+実験を行い，実験結果をまとめた後，実験結果が正しいかどうかを確認した．具体的には，それぞれの書込みに対して，特定したアカウントが正しいかどうかを，被験者本人に確認した．また，特定できなかった書込みに対して，特定できなかった原因を調査した．
+
+ユーザA，ユーザB，ユーザC，...(以降省略)がそれぞれ誰であるかを確認した．それぞれのユーザ(被験者)に対して，書込み番号に対応する書込みを行ったかどうかを確認した．その結果，特定できたすべての書込みに対して，特定したアカウント(被験者)が正しいことがわかった．
+
+特定できなかった2名の被験者(表\ref{tb: exp_result}中のユーザαとユーザβ)に対しても同様に，書込み番号に対応する書込みを行ったかどうかを確認した．ユーザαの書込みとユーザβの書込みのうち，どちらの書込みを行ったかを2名の被験者それぞれに申告してもらい，ユーザα，ユーザβとして分類した書込みが，それぞれ同一人物による書込みであることを確認した．また，それぞれの被験者のユーザエージェントが正しいこと(ユーザエージェントから推測可能な，使用しているOS，ブラウザやそれらのバージョン)も確認した．
 
 
 
